--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/comp2019_Assignment1/Location.java=UTF-8
 encoding//src/comp2019_Assignment1/Path.java=UTF-8
 encoding//src/comp2019_Assignment1/PathFinder.java=UTF-8
